feat: new camera mode: Game mode
- Game mode uses WASD+mouse to control the camera
- Rewritten controls pane